
<resources>
    <string name="app_name">Coffee</string>

    <string name="default_web_client_id">AIzaSyC9X3opK0WUcGDmGlgLopswa7Qr8ienWQI</string>
    <string name="facebook_app_id">945459344114168</string>
    <string name="facebook_app_secret">f6c83c8ac6c7ea27a0f4f386de2e53e3</string>


    <string name="cancel_txt">CANCEL</string>
    <string name="done_txt">DONE</string>
    <string name="next">Next</string>

    <string name="error_title">Error</string>
    <string name="error_message">An Error occurred</string>
    <string name="error_retry">Retry</string>
    <string name="error_cancel">Cancel</string>
    <string name="token_device">Token Device</string>
    <string name="signing_passphrase">Signing Passphrase</string>
    <string name="token_pin">Token Pin</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="picked_for_you_txt">Picked for you</string>
    <string name="just_for_you_txt">Just For You</string>
    <string name="reviewed_by_txt">Reviewed by</string>
    <string name="max_sheets_txt">Max Sheets</string>
    <string name="go_to_your_taste_profile_txt">Go to your taste profile</string>
    <string name="rate_txt">Rate</string>
    <string name="ratings_txt">ratings</string>
    <string name="actions_txt">Actions</string>
    <string name="add_to_cart_txt">Add to cart</string>
    <string name="highlights_txt">Highlights</string>
    <string name="facts_txt">Facts</string>
    <string name="reviews_txt">Reviews</string>
    <string name="add_a_new_review_txt">Add a new review</string>
    <string name="helpful_txt">Helpful</string>
    <string name="recent_txt">Recent</string>
    <string name="average_price_txt">Average price</string>
    <string name="show_all_reviews_txt">Show all reviews</string>
    <string name="based_on_your_activity_txt">Based on your %1$s activity</string>
    <string name="edit_your_review_txt">Edit your review</string>
    <string name="find_your_new_favorite_txt">Find your new favorite\n %1$s</string>
<!--    %1$s is used to replace with custom text in kotlin code-->
    <string name="do_you_like_txt">Do you like %1$s?</string>
    <string name="based_on_your_taste_and_the_magic_of_deep_knowledge_txt">Based on your Taste and the magic of deep %1$s knowledge</string>
    <string name="continue_with_email_txt">Continue with email</string>
    <string name="continue_with_google_txt">Continue with Google</string>
    <string name="continue_with_facebook_txt">Continue with Facebook</string>
    <string name="buy_the_right_txt">Buy the right %1$s</string>
    <string name="what_s_your_email_txt">What\'s your email?</string>
    <string name="continue_txt">Continue</string>
    <string name="log_in_txt">Log in</string>
    <string name="welcome_back_log_in_to_your_account_txt">Welcome back! Log in to\nyour %1$s account</string>
    <string name="welcome_back_sign_up_txt">Welcome back! Sign up to\ncreate %1$s account</string>
    <string name="password_txt">Password</string>
    <string name="email_txt">Email</string>
    <string name="email_me_a_link_to_login_in_txt">Email me a link to login in</string>
    <string name="or_txt">or</string>
    <string name="go_to_notifications_settings_txt">Go to notifications settings</string>
    <string name="no_notifications_description_txt">We\'ll tell you about special %1$s\noffers, updates on your orders, or\nwhen your friends review a %1$s</string>
    <string name="no_notifications_yet_txt">No notifications yet</string>
    <string name="ship_to_ab_txt">Ship to AB</string>
    <string name="shop_by_type_txt">Shop %1$s by type</string>
    <string name="shop_by_country_txt">%1$smaking countries</string>
    <string name="shop_by_styles_txt">Shop %1$s by styles</string>
    <string name="taste_characteristics_txt">Taste Characteristics</string>
    <string name="edit_txt">Edit</string>
    <string name="what_people_talk_about_txt">WHAT PEOPLE TALK ABOUT</string>
    <string name="show_more_txt">Show more</string>
    <string name="of_in_the_world_txt">of %1$ss in</string>
    <string name="the_world_txt">The World</string>
    <string name="napa_valley_txt">Napa Valley</string>
    <string name="of_from_txt">of %1$ss from</string>
    <string name="ranking_txt">%1$s Ranking</string>
    <string name="californian_coffee_txt">Californian\nCoffee</string>
    <string name="your_ratings_txt">Your ratings</string>
    <string name="rate_every_coffee_you_try_to_build_your_personal_taste_profile_txt">Rate every coffee you try, to build your personal taste profile</string>
    <string name="product_info_txt">California is known primarily for its Cabernet and Chardonnay, but they are also producing some really lovely Sauvignon Blancs. These wines are typically high in acidity and great with food.\n\nSauvignon Blanc in California is usually a little fruitier than it is in France, and a little lighter in bo...</string>
    <string name="instantly_pair_any_dish_or_wine_you_choose_txt">Instantly pair any dish or\n%1$s you choose</string>
    <string name="join_premium_txt">Join Premium</string>
    <string name="pairs_well_with_txt">Pairs well with</string>
    <string name="search_any_txt">Search any %1$s</string>
    <string name="borgogno_txt">Borgogno</string>
    <string name="best_of_txt">Best of %1$s</string>
    <string name="vintage_comparison_txt">Vintage comparison</string>
    <string name="best_price_txt">Best price</string>
    <string name="top_rating_txt">Top rating</string>
    <string name="show_all_vintages_available_txt">Show all vintages available</string>
    <string name="save_txt">Save</string>
    <string name="shop_by_bean_txt">Shop %1$s by bean</string>
    <string name="shop_by_region_txt">Shop %1$s by region</string>
    <string name="_990_txt">990 coffees</string>
    <string name="filter_txt">Filter</string>
    <string name="michael_miller_rated_txt">Michael Miller rated a %1$s</string>
    <string name="leave_a_comment_txt">Leave a comment</string>
    <string name="post_txt">Post</string>
    <string name="bean_txt">Bean</string>
    <string name="region_txt">Region</string>
    <string name="type_txt">Type</string>
    <string name="rating_txt">Rating</string>
    <string name="price_txt">Price</string>
    <string name="country_txt">Country</string>
    <string name="reviews_by_stars_txt">Reviews by stars</string>
    <string name="all_reviews_txt">All Reviews</string>
    <string name="reset_password_txt">Reset password</string>
    <string name="success_txt">Success</string>
    <string name="a_password_reset_email_has_been_sent_to_your_registered_email_address_txt">A password reset email has been sent to your registered email address</string>
    <string name="styles_txt">Styles</string>
    <string name="sizes_txt">Sizes</string>
    <string name="don_t_have_accout_signup_txt">Don\'t have accout? Signup</string>
    <string name="signup_txt">Signup</string>
    <string name="username_txt">Username</string>
    <string name="sign_in_failed_plz_try_again_txt">Sign-in failed, Plz try again</string>
    <string name="take_a_photo_of_wine_labels_then_tap_any_to_see_the_wine_information_txt">Take a photo of %1$s labels, then tap any to see the %1$s information</string>
    <string name="position_the_label_within_the_frame_txt">Position the %1$s LABEL \nwithin the frame</string>
    <string name="oops_there_was_an_error_txt">Oops! There was an error</string>
    <string name="something_went_wrong_while_we_nwere_trying_to_match_the_txt">Something went wrong while we were trying to match the %1$s</string>
</resources>