<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10sdp"
    android:background="@color/greyDark">


    <!-- Percentage Text -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ranking_txt"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Custom Circular Progress View -->
    <com.app.vivi.customviews.CircularProgressView
        android:id="@+id/cpWorldRanking"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintEnd_toStartOf="@+id/cpRegionRanking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>

    <!-- Custom Circular Progress View -->
    <com.app.vivi.customviews.CircularProgressView
        android:id="@+id/cpRegionRanking"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:padding="@dimen/_10sdp"
        app:layout_constraintStart_toEndOf="@+id/cpWorldRanking"
        app:layout_constraintBottom_toBottomOf="@+id/cpWorldRanking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cpWorldRanking"/>

    <!-- Percentage Text -->
    <TextView
        android:id="@+id/percentageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_13ssp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/cpWorldRanking"
        app:layout_constraintEnd_toEndOf="@+id/cpWorldRanking"
        app:layout_constraintStart_toStartOf="@+id/cpWorldRanking"
        app:layout_constraintTop_toTopOf="@+id/cpWorldRanking" />
    <!-- Percentage Text -->
    <TextView
        android:id="@+id/tvRegionRankingpercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_13ssp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/cpRegionRanking"
        app:layout_constraintEnd_toEndOf="@+id/cpRegionRanking"
        app:layout_constraintStart_toStartOf="@+id/cpRegionRanking"
        app:layout_constraintTop_toTopOf="@+id/cpRegionRanking" />

    <!-- Percentage Text -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvWorldRankingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/of_in_the_world_txt"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="@+id/cpWorldRanking"
        app:layout_constraintStart_toStartOf="@+id/cpWorldRanking"
        app:layout_constraintTop_toBottomOf="@+id/cpWorldRanking" />

    <!-- Percentage Text -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvWorldRankingDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_world_txt"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvWorldRankingTitle"
        app:layout_constraintStart_toStartOf="@+id/tvWorldRankingTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvWorldRankingTitle" />

    <!-- Percentage Text -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvRegionRankingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/of_from_txt"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="@+id/cpRegionRanking"
        app:layout_constraintStart_toStartOf="@+id/cpRegionRanking"
        app:layout_constraintTop_toBottomOf="@+id/cpRegionRanking" />


    <!-- Percentage Text -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvRegionRankingDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/napa_valley_txt"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvRegionRankingTitle"
        app:layout_constraintStart_toStartOf="@+id/tvRegionRankingTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvRegionRankingTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>
