<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_product"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tvReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:text="@string/reviews_txt"
            android:textColor="@color/greyDark"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvReviewsTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:text="@string/add_a_new_review_txt"
            android:textColor="@color/greyDark"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvReviews" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />


        <com.app.honey.customviews.CustomTextView
            android:id="@+id/tvHelpful"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:gravity="center"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/helpful_txt"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12ssp"
            app:backgroundColor="@color/colorBlack"
            app:cornerRadius="@dimen/_25sdp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
            app:layout_constraintTop_toBottomOf="@+id/tvReviewsTitle2" />

        <com.app.honey.customviews.CustomTextView
            android:id="@+id/tvRecent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:gravity="center"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/recent_txt"
            android:textColor="@color/grey"
            android:textSize="@dimen/_12ssp"
            app:backgroundColor="@color/greyLight"
            app:cornerRadius="@dimen/_25sdp"
            app:layout_constraintStart_toEndOf="@+id/guidelineCenter"
            app:layout_constraintTop_toTopOf="@+id/tvHelpful"
            app:layout_constraintBottom_toBottomOf="@+id/tvHelpful"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHelpful"
            tools:itemCount="3"
            tools:listitem="@layout/reviews_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>